<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="@null"
                android:onClick="getAvatar"
                android:scaleType="fitXY"
                android:src="@drawable/user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@id/photo" />

            <TextView
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/photo"
                android:gravity="start"
                android:text="@string/def_lastname"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/lastname"
                android:gravity="start"
                android:text="@string/def_firstname"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/secondname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastname"
                android:layout_toEndOf="@id/photo"
                android:gravity="start"
                android:text="@string/def_secondname"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/secondname"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/photo"
                android:gravity="start"
                android:text="@string/def_type"
                android:visibility="gone" />

            <TextView
                android:id="@+id/organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type"
                android:layout_toEndOf="@id/photo"
                android:gravity="start"
                android:text="@string/def_organization"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/organization"
                android:gravity="start"
                android:text="@string/def_exp"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/organization"
                android:layout_toEndOf="@id/photo"
                android:gravity="start"
                android:text="@string/def_department"
                android:visibility="gone" />

            <TextView
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/department"
                android:layout_toEndOf="@id/photo"
                android:gravity="start"
                android:text="@string/def_position"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/position"
                android:layout_toEndOf="@id/photo"
                android:gravity="start"
                android:text="@string/def_schedule"
                android:textSize="20sp"
                android:visibility="gone" />

        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/info" />

    </RelativeLayout>
</LinearLayout>